Refactor progress tracking and update styles
Simplified the progress tracking logic in script.js to use checkbox states and update the progress bar directly. Updated the progress bar element in index.html to use an id. Adjusted background and text colors in the #today section of style.css for improved appearance.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="today">
           <h2>Today 🌞</h2>
           <h6>Just a step away, keep going!</h6>
-          <progress value="100" max="100">2/3Completed%</progress>
+          <progress id = "progressBar" value="100" max="100">2/3Completed%</progress>
 
           <div id="goal1" class="goalBox">
             <div id="goal1main">
